appId: com.scto.apptemplate.compose
---
- launchApp:
        appId: "com.scto.apptemplate.compose"
        clearState: true
- waitForAnimationToEnd:
        timeout: 1500
#- extendedWaitUntil:
#      visible: "Next"
#      timeout: 1500
#- tapOn: "Next"
#- tapOn: "Next"
#- tapOn: "Next"
- extendedWaitUntil:
        visible: "People"
        timeout: 5000
- tapOn: "People"
- extendedWaitUntil:
        visible: "Manilla Andrews"
        timeout: 5000
- tapOn: "Manilla Andrews"
- "waitForAnimationToEnd"
- "back"

# How to run this flow:
# 1. Install Maestro: Terminal -> curl -Ls "https://get.maestro.mobile.dev" | bash
# 2. Install the app on emulator (doesn't work with physical device)
# 3. Run the flow: Terminal ->  maestro test -c maestro/people-profile-flow.yaml